--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,6 @@
-
 spring.config.import=optional:configserver:
 
-server.port=8081
+server.port=8083
 
 #Eureka
 
@@ -29,7 +28,7 @@ logging.file.name=C:/logs/springboot.log
 
 #server.port=8081
 spring.application.name=commande
-eureka.client.server-url.default-zone=http//localhost:8761/eureka/
+eureka.client.server-url.default-zone=http://discovery:8761/eureka
 eureka.client.resgister-with-eureka=true
 #
 ### H2
